--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <!-- Head -->
 <head>
-<title>C-Resume a personal Category Bootstrap responsive Website Template | Home :: w3layouts</title>
+<title>Suraj</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="C-Resume a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -59,9 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="w3-banner-text">
 				<h3>Career Goal</h3>
 				<p>
-I want to work towards pitching novel ideas in Artificial Intelligence and implementing them to get a cognitive substitute for every basic item around us. I want to actively work on ideas that contribute towards providing different types of intelligence to everyday utilities from a every day pen to the staircase we walk on to, to the computers we interact almost daily with. For e.g: What if Pens can be recharged? or what if the staircase turned into a personalised piano based android app so that you never get bored taking those stairs instead of lifts for fitness or what if computers turned out to be emotional and understood you as your mom. Ideas are floating everywhere and in this case in my mind too, but what the world is looking up to is someone who is capable of bridging this gap between implementation and innovation. If Interested, Do visit my profile and feel free to ping me for a collaboration where we together can contribute to a millions of ideas waiting to be implemented to actually make the world a better place.
-
-
+The sciences of deep neural networks and probability models do not have a simplified shared language. My goal is to bridge this idea gap and allow for more collaboration and discussion between these fields, and provide a consistent implementation.
 ‌ </p>
 			</div>
 				<div class=" w3-right-addres-1">
@@ -112,7 +110,7 @@ I want to work towards pitching novel ideas in Artificial Intelligence and imple
 		 
 				<div class="col-md-6 w3-about-grid-right1">
 					<h3>Curriculum Vitae.</h3>
-					<h5><a  href ="https://drive.google.com/file/d/1vEZBao8meRSDuVF3iLzBqgml9oBFbpUU/view?usp=sharing">Click here...</a></h5>
+					<h5><a  href ="https://drive.google.com/open?id=1CKfUkIeHtGBqy9vUO_6QHVmgqLDzYITl">Click here...</a></h5>
 					<div class= "w3-about-grid-small-border">
 					<div class="col-md-4 w3-about-grid-small">
 						<h3 class="w3-head-project">3</h3>
@@ -142,6 +140,16 @@ I want to work towards pitching novel ideas in Artificial Intelligence and imple
 				<div class="w3-edu-grid-header">
 				<h3>Experiences</h3>
 				</div>
+        <div class="col-md-4 w3-edu-info1">
+					<h3>June 18 - Present</h3>
+					<h4>Computer vision and deep learning engineer</h4>
+			</div>
+			<div class="col-md-6 w3-edu-info2">
+				<h3>Dimension NXG Pvt. Ltd.</h3>
+					<h4><i class="fa fa-code" aria-hidden="true"></i><span>programmer</span></h4>
+					<p>Developed and deployed an A.I & computer vision based computationally inexpensive hand gesture module running on the core product of the company- AjnaLens. </p>
+			</div>
+        
 				<div class="col-md-4 w3-edu-info1">
 					<h3>Oct- Dec 17</h3>
 					<h4>Software developer</h4>
@@ -289,7 +297,7 @@ I want to work towards pitching novel ideas in Artificial Intelligence and imple
 						</div>
 						<div class="w3ls_footer_grid_leftr">
 							<h4>Location</h4>
-							<p>IIIT Guwahati, Assam, India</p>
+							<p>Mumbai,India</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -309,7 +317,7 @@ I want to work towards pitching novel ideas in Artificial Intelligence and imple
 						</div>
 						<div class="w3ls_footer_grid_leftr">
 							<h4>Call Me</h4>
-							<p>(+91) 700 245 7082</p>
+							<p>(+91) 848-665-6592</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -318,7 +326,7 @@ I want to work towards pitching novel ideas in Artificial Intelligence and imple
 			</div>
 		</div>
 		<div class="w3l_footer_pos">
-			<p>© 2017 C-Resume. All Rights Reserved | Design by <a href="https://w3layouts.com/">W3layouts</a></p>
+			
 		</div>
 	</div>
 <!-- //footer -->
