🐑🚆 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="w3-banner-grids">
 			<div class="col-md-6 w3-banner-grid-left">
 				<div class="w3-banner-img">
-					<img src="images/ban661.jpg" alt="img">
+					<img src="images/IMG20190531191756.jpg" alt="img">
 					<h3 class="test">Suraj</h3>
 					<p class="test" >Artificial Intelligence Enthusiast</p>
 				</div>
@@ -110,7 +110,7 @@ The sciences of deep neural networks and probability models do not have a simpli
 		 
 				<div class="col-md-6 w3-about-grid-right1">
 					<h3>Curriculum Vitae.</h3>
-					<h5><a  href ="https://drive.google.com/open?id=1CKfUkIeHtGBqy9vUO_6QHVmgqLDzYITl">Click here...</a></h5>
+					<h5><a  href ="https://drive.google.com/open?id=14f8-eYbJ6xCG28p8b2YFifrbZtyELhw7">Click here...</a></h5>
 					<div class= "w3-about-grid-small-border">
 					<div class="col-md-4 w3-about-grid-small">
 						<h3 class="w3-head-project">3</h3>
@@ -121,8 +121,8 @@ The sciences of deep neural networks and probability models do not have a simpli
 						<h5>Projects</h5>
 					</div>	
 					<div class="col-md-4 w3-about-grid-small">
-						<h3 class="w3-head-project">10</h3>
-						<h5>D.I.Y hobbyist projects</h5>
+						<h3 class="w3-head-project">5</h3>
+						<h5>Indian Patents(Filed)</h5>
 						<div class="clearfix"></div>
 					</div>
 			
@@ -147,7 +147,7 @@ The sciences of deep neural networks and probability models do not have a simpli
 			<div class="col-md-6 w3-edu-info2">
 				<h3>Dimension NXG Pvt. Ltd.</h3>
 					<h4><i class="fa fa-code" aria-hidden="true"></i><span>programmer</span></h4>
-					<p>Developed and deployed an A.I & computer vision based computationally inexpensive hand gesture module running on the core product of the company- AjnaLens. </p>
+					<p>Developed and deployed AI modules for levearaging interaction of user wearing AjnaLens  through gesture, voice and body motion in augmented reality space. </p>
 			</div>
         
 				<div class="col-md-4 w3-edu-info1">
@@ -195,7 +195,7 @@ The sciences of deep neural networks and probability models do not have a simpli
 			<div class="col-md-9 w3-edu-info-right2">
 				<h3>IIIT Guwahati</h3>
 					<h4>Electronics and Communication Engineering</h4>
-					<p>B.Tech, 8th Sem., CPI: 7.39*/10</p>
+					<p>B.Tech, 8th Sem., CPI: 7.32/10</p>
 			</div>
 			<div class="clearfix"></div>
 			<div class="col-md-3 w3-edu-info-right1">
